Publicando v1.0.2
