# src/main/resources/com/crivano/blucservice/api/swagger.yaml
@@ -323,6 +323,10 @@ definitions:
         type: string
       inss0:
         type: string
+      cnpj0: 
+        type: string
+      person_name0: 
+        type: string
     example:
       aki0: D4B1C3294997AD4E6636DBE94E004A6AD8C3DAC4
       basicConstraint0: -1
